--- a/src/app/shared/components/app-shell/app-shell.component.scss
+++ b/src/app/shared/components/app-shell/app-shell.component.scss
@@ -4,6 +4,7 @@
 }
 
 .app-shell {
+  height: 100%;
   height: 100dvh;
   display: flex;
   flex-direction: column;
